bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if (!weekday) or (vacation){
    return(true)
  }
  return(false)
}
